[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali niaz", email = "aliniaz2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
assignment-1 = "assignment_1:init"
main1 = "assignment_1:main1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
